# course-allocation-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
data/: courses.csv  students.csv
docs/: ALGORITHM.md
include/course_allocation/: allocator.hpp  csv.hpp  models.hpp
src/: allocator.cpp  benchmark.cpp  csv.cpp  main.cpp
tests/: test_allocator.cpp
